<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.github.mofosyne.tagdrop.ViewDataUriActivity">

    <item
        android:id="@+id/action_open_external"
        android:title="@string/action_open_external"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_save"
        android:title="@string/action_save"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_view_as"
        android:title="@string/action_view_as"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_view_rendered"
                    android:title="@string/view_mode_rendered" />
                <item
                    android:id="@+id/action_view_text"
                    android:title="@string/view_mode_text" />
                <item
                    android:id="@+id/action_view_hex"
                    android:title="@string/view_mode_hex" />
                <item
                    android:id="@+id/action_view_cbor"
                    android:title="@string/view_mode_cbor" />
            </group>
        </menu>
    </item>

</menu>
