<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_demo_collection"
        android:title="@string/menu_demo_collection"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_retained_keys"
        android:title="@string/menu_retained_keys"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_backup"
        android:title="@string/action_backup"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_restore"
        android:title="@string/action_restore"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_readme"
        android:title="@string/button_readme"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_spec"
        android:title="@string/button_spec"
        app:showAsAction="never" />

</menu>
